--- a/desafio-hinova/src/main/resources/application.properties
+++ b/desafio-hinova/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.sql.init.schema-locations=classpath:/schema.sql
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:file:C:/Users/pedro/DesafioHinova/Desafio-vaga-grupohinova/desafio-hinova/Data_base;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:C:/Users/<seu_usuario>/<caminho_do_arquivo Data_base.mv.db>;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
