implementação do kafka e correção em algumas validações

--- a/desafio-hinova/src/main/resources/application.properties
+++ b/desafio-hinova/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 spring.application.name=desafio-hinova
 
-spring.jpa.hibernate.ddl-auto=create
-spring.flyway.enabled=false
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:/schema.sql
+-Dspring-boot.run.profiles=debug
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:file:C:/Users/<seu_usuario>/<caminho_do_arquivo Data_base.mv.db>;AUTO_SERVER=TRUE
+
+spring.flyway.enabled=true
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:file:./Data_base
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.kafka.bootstrap-servers=localhost:9094
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
